languages-api/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: languages-service
  labels:
    run: languages-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    run: languages-service
